feat: add shark fight to ranking report